--- a/Understanding the Dataset.ipynb
+++ b/Understanding the Dataset.ipynb
@@ -371,7 +371,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "78779d72",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3664,7 +3666,9 @@
    "cell_type": "code",
    "execution_count": 146,
    "id": "9b0383cb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3685,6 +3689,154 @@
    ],
    "source": [
     "metadata.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffdbdae6",
+   "metadata": {},
+   "source": [
+    "##### For Keywords dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca78ada3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_keywords = pd.read_csv('keywords.csv')\n",
+    "df_keywords.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1ecdc12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_keywords.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "179c0e8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_keywords['keywords']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faaf8043",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_keywords = df_keywords[df_keywords['keywords'] != '[]']\n",
+    "df_keywords.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05cf9135",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list1 =  df_keywords['keywords'].tolist()\n",
+    "import ast\n",
+    "for i in range(len(list1)) :\n",
+    "    list1[i] = ast.literal_eval(list1[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b5c8a94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_keywords['keywords'] = list1\n",
+    "\n",
+    "len(df_keywords.iloc[1]['keywords'])\n",
+    "df_keywords['keywords'].iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5809316",
+   "metadata": {},
+   "source": [
+    "###### for credits Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e810f06c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_credits = pd.read_csv('credits.csv')\n",
+    "df_credits.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4a590e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_credits_dummy = df_credits[(df_credits['crew'] != '[]') & (df_credits['cast'] != '[]')]\n",
+    "df_credits_dummy.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45d550fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(df_credits.iloc[0]['cast'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "397bd18e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list2 = df_credits_dummy['cast'].tolist()\n",
+    "# ast\n",
+    "for i in range(len(list2)):\n",
+    "    list2[i] = ast.literal_eval(list2[i])  \n",
+    "    \n",
+    "    \n",
+    "df_credits_dummy['cast'] = list2\n",
+    "df_credits_dummy.iloc[0]['cast']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2e7eb6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list2 = df_credits_dummy['crew'].to_list()\n",
+    "for i in range(len(list2)):\n",
+    "    list2[i] = ast.literal_eval(list2[i])\n",
+    "    \n",
+    "df_credits_dummy['crew'] = list2\n",
+    "df_credits_dummy.iloc[0]['crew']   "
    ]
   },
   {
