--- a/KNN-updated.ipynb
+++ b/KNN-updated.ipynb
@@ -1300,7 +1300,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1314,11 +1314,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 (default, Sep 16 2021, 16:59:28) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "548b74416408c9b0533ddf9a135f814fbe6dccac412294bd8565988e5bb4ed32"
+    "hash": "8a6c8994fc5cb661ec93644d3d265534183b7f4a7d339c2cccb0f2c72bae3cc5"
    }
   }
  },
